# atlas

./: .body-scratch-melinoe-advance  .body-scratch-melinoe-body-scratch-polish  .check_mdbook_links_allowlist  .gitignore  .gitmodules  CHANGELOG.md  MDBOOK_DETECTOR_PARITY.md  MDBOOK_DETECTOR_PARITY_KWAVERS.md  MDBOOK_LINK_WARNINGS.md  README.md  backlog.md  checklist.md  gap_audit.md  script.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  python-wheels.yml
docs/adr/: 0001-gpu-accelerator-substrate.md  0002-heterogeneous-topology-law.md  0003-secure-accelerator-parallelization.md  0004-hephaestus-kernel-seam.md  0005-eunomia-scalar-ssot.md  0006-eunomia-complex-csr-ssot.md  0007-eunomia-solver-csr-ssot.md  0008-kwavers-math-csrscalar-migration.md  0009-kwavers-batch1-rayon-to-moirai-cte.md  0010-cfdrs-atlas-pointer-advance.md  0011-atlas-root-hygiene-ritual.md  0012-ritk-burn-trait-rebind.md  0013-kwavers-batch1-source-side-closure.md  0014-kwavers-batch1-closeout-tag.md  0015-kwavers-batch2-entrypoint1-helper-const-generics.md  0016-kwavers-block5-resolution-design-spec.md  0017-moirai-numa-path-redesign.md  0017-private-leoneuro-submodule.md  0018-tree-srp-module-hierarchy-cleanup.md  0019-tree-dup-002-dual-channel-consolidation.md  0020-provider-graph-refresh.md  0021-aequitas-quantity-law-foundation.md  0022-horae-athena-provider-extraction.md  0023-harmonia-coupling-promotion.md  0024-criterion-regression-gate.md  0025-proteus-material-property-promotion.md  0026-tyche-uq-promotion.md  0027-provider-checkout-ssot.md  INDEX.md  (+4 more)
parity_artefacts/: det_cfdrs_targets.txt  p8_book_md_files.txt  p8_chapter_excerpts.txt
repos/helios/xtask/: Cargo.toml
repos/helios/xtask/src/: main.rs  migration_audit.rs
scripts/: _wire_cpu_impl.py  build-all.ps1  build-all.sh  check_mdbook_links.py  fix_link_depth.py
tools/checkout-path-dependencies/: Cargo.toml  README.md
tools/checkout-path-dependencies/src/: checkout.rs  error.rs  git.rs  graph.rs  lib.rs  main.rs  manifest.rs
tools/checkout-path-dependencies/tests/: checkout.rs
tools/criterion-regression/: Cargo.toml  README.md
tools/criterion-regression/src/: lib.rs  main.rs
tools/criterion-regression/src/budget/: error.rs  mod.rs  runner.rs  targets.rs
tools/criterion-regression/src/criterion/: counterbalanced.rs  discovery.rs  error.rs  estimate.rs  mod.rs  model.rs  regression.rs  replicated.rs
tools/criterion-regression/tests/: audit.rs
(+36 files in other folders)
