[package]
name = "atlas-provider-checkout"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
description = "Exact-gitlink checkout for Atlas sibling path dependencies"
repository = "https://github.com/ryancinsight/atlas"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "atlas_provider_checkout"
path = "src/lib.rs"

[[bin]]
name = "checkout-path-dependencies"
path = "src/main.rs"

[dependencies]
toml = "1.1.3"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.dev]
debug = "line-tables-only"
overflow-checks = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
overflow-checks = true

[profile.release]
debug = false
strip = "symbols"
