[package]
name = "atlas-criterion-gate"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
description = "Statistical Criterion regression gate for Atlas repositories"
repository = "https://github.com/ryancinsight/atlas"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "atlas_criterion_gate"
path = "src/lib.rs"

[[bin]]
name = "criterion-regression"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.dev]
debug = "line-tables-only"
overflow-checks = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
overflow-checks = true

[profile.release]
debug = false
strip = "symbols"
